# markoff

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config_fast_builds.toml
.github/workflows/: release.yaml
.zed/: settings.json  tasks.json
assets/hui/components/: bg_img.xml  column.xml  grid_layout.xml  menu_button.xml  option.xml  row.xml  select.xml  settings_button.xml  sim_image.xml  slider_input.xml  text_input.xml
assets/hui/screens/: main_menu.xml  sandbox.xml
assets/hui/screens/sandbox/: settings.xml  tools.xml
assets/hui/styles/: fonts.css  main_menu.css  root.css
assets/hui/widgets/: slider.xml  text_input.xml
assets/shader/: simulation.wgsl
assets/sprites/stamps/: 16px.ase  32px.ase  8px.ase
src/: main.rs  plugins.rs
src/plugins/cells/: mod.rs  types.rs
src/plugins/dev/: mod.rs
src/plugins/sim/: data.rs  lifecycle.rs  mod.rs  types.rs
src/plugins/sim/native/: mod.rs  render.rs  shader.rs
src/plugins/sim/render/: cpu.rs  gpu.rs  mod.rs
src/plugins/sim/render/gpu/: render.rs  shader.rs
src/plugins/sim/web/: mod.rs
src/plugins/simulation/: mod.rs  render.rs  shader.rs
src/plugins/stamps/: mod.rs
src/plugins/teams/: mod.rs  types.rs
src/plugins/ui/: data.rs  mod.rs  screens.rs  widgets.rs
src/plugins/ui/old/screens/: mod.rs  sandbox.rs
src/plugins/ui/old/screens/sandbox/: left_panel_items.rs
src/plugins/ui/old/theme/: mod.rs  text.rs
src/plugins/ui/old/widgets/: bg.rs  grid.rs  mod.rs  text.rs
src/plugins/ui/screens/: init.rs  main_loop.rs  main_menu.rs  mod.rs  sandbox.rs
src/plugins/ui/screens/sandbox/: top_bar.rs
src/plugins/ui/theme/: button.rs  mod.rs  text.rs
src/plugins/ui/widgets/: button.rs  data.rs  mod.rs  scrollable.rs  select.rs  sim_image.rs  slider.rs  stamp_selector.rs  text.rs
