[package]
name = "markoff"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_simple_subsecond_system = "0.2"
itertools = "0.14.0"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9.1"
strum = { version = "0.27.1", features = ["derive"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
default = ["dev"]
dev_native = []
dev = []
compute_shaders = []

### METADATA AND LINTS ########################################################
[package.metadata.bevy_cli.native.dev]
features = [
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

### BUILD OPTIMIZATION ########################################################
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
