[package]
name = "markoff"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
bevy_simple_subsecond_system = "0.2"
itertools = "0.14.0"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9.1"
getrandom = "0.3"
strum = { version = "0.27.1", features = ["derive"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_dylib = { version = "0.16.0-rc.5", optional = true }
bevy_hui = "0.4.0"
bevy_hui_widgets = "0.3.0"
derivative = "2.2.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
bevy-inspector-egui = { version = "0.31.0", optional = true }

[features]
default = ["dev"]
dev = ["bevy/bevy_dev_tools", "bevy-inspector-egui"]
dev_native = ["dev", "native", "bevy/dynamic_linking", "bevy_dylib"]
dev_web = ["dev", 'web']
web = ["getrandom/wasm_js"]
native = ["compute_shaders"]
compute_shaders = []

### METADATA AND LINTS ########################################################
[package.metadata.bevy_cli.native.dev]
features = [
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

### BUILD OPTIMIZATION ########################################################
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
